Make it suitable for ecoach development

--- a/.env.dist
+++ b/.env.dist
@@ -1,11 +1,11 @@
 # Symfony application's path (absolute or relative)
-SYMFONY_APP_PATH=../path/to/symfony/folder
+SYMFONY_APP_PATH=../new-ecoach
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=mydb
-MYSQL_USER=user
-MYSQL_PASSWORD=userpass
+MYSQL_DATABASE=ecoach
+MYSQL_USER=ecoach
+MYSQL_PASSWORD=ecoach
 
 # Timezone
-TIMEZONE=Europe/Paris
+TIMEZONE=UTC
