--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,17 @@
 version: '2'
 
 services:
+    redis:
+        image: redis
+        ports: 
+            - "6379:6379"
     db:
-        image: mysql
+        image: mariadb:10.1
         volumes:
             - "./.data/db:/var/lib/mysql"
+        image: mariadb:10.1
+        ports:
+            - "3306:3306"
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -18,6 +25,9 @@ services:
         volumes:
             - ${SYMFONY_APP_PATH}:/var/www/symfony
             - ./logs/symfony:/var/www/symfony/app/logs
+        links:
+            - redis
+            - db
     nginx:
         build: nginx
         ports:
