--- a/nginx/symfony.conf
+++ b/nginx/symfony.conf
@@ -1,5 +1,5 @@
 server {
-    server_name symfony.local;
+    server_name *.ecoach.test;
     root /var/www/symfony/web;
 
     location / {
@@ -7,13 +7,15 @@ server {
     }
 
     location @rewriteapp {
-        rewrite ^(.*)$ /app.php/$1 last;
+        rewrite ^(.*)$ /app_dev.php/$1 last;
     }
 
     location ~ ^/(app|app_dev|config)\.php(/|$) {
         fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
+        fastcgi_buffers 16 16k; 
+        fastcgi_buffer_size 32k;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
     }
