Make xdebug work on macs

--- a/.env.dist
+++ b/.env.dist
@@ -9,3 +9,10 @@ MYSQL_PASSWORD=ecoach
 
 # Timezone
 TIMEZONE=UTC
+
+# Loopback alias for accessing the host machine from within a vm
+LOOPBACK_ADDR=172.16.123.1
+# run `sudo ifconfig lo0 alias 172.16.123.1`
+
+# X-debug
+XDEBUG_PORT=9001
