--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '2'
 
 services:
+    dnsmasq:
+        image: andyshinn/dnsmasq
+        ports:
+            - "53:53/tcp"
+            - "53:53/udp"
+        cap_add:
+            - NET_ADMIN
+        command: --log-facility=-
+        volumes:
+            - ./.data/dnsmasq.conf:/etc/dnsmasq.conf
+            - ./.data/dnsmasq.d:/etc/dnsmasq.d
     redis:
         image: redis
         ports: 
