Actually commit dnsmasq config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - NET_ADMIN
         command: --log-facility=-
         volumes:
-            - ./.data/dnsmasq.conf:/etc/dnsmasq.conf
+            - ./etc/dnsmasq.conf:/etc/dnsmasq.conf
             - ./.data/dnsmasq.d:/etc/dnsmasq.d
     redis:
         image: redis
