--- a/nginx/symfony.conf
+++ b/nginx/symfony.conf
@@ -23,3 +23,33 @@ server {
     error_log /var/log/nginx/symfony_error.log;
     access_log /var/log/nginx/symfony_access.log;
 }
+
+server {
+    # SSL configuration
+    listen *:443 ssl;
+    ssl_certificate ecoach.dev.crt.pem;
+    ssl_certificate_key ecoach.dev.key.pem;
+    server_name *.ecoach.dev;
+    root /var/www/symfony/web;
+
+    location / {
+        try_files $uri @rewriteapp;
+    }
+
+    location @rewriteapp {
+        rewrite ^(.*)$ /app_dev.php/$1 last;
+    }
+
+    location ~ ^/(app|app_dev|config)\.php(/|$) {
+        fastcgi_pass php-upstream;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_buffers 16 16k; 
+        fastcgi_buffer_size 32k;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param HTTPS off;
+    }
+
+    error_log /var/log/nginx/symfony_error.log;
+    access_log /var/log/nginx/symfony_access.log;
+}
